comp.txt
cc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_XOPEN_SOURCE=700L -DVERSION=\"6.5\" -DXINERAMA dwm.c
In file included from dwm.c:319:
config.h:103:1: error: unknown type name ‘Autostarttag’
  103 | Autostarttag autostarttaglist[] = {
      | ^~~~~~~~~~~~
config.h:104:9: warning: braces around scalar initializer
  104 |         {.cmd = todo, .tags = 1 << 7 },
      |         ^
config.h:104:9: note: (near initialization for ‘autostarttaglist[0]’)
config.h:104:10: error: field name not in record or union initializer
  104 |         {.cmd = todo, .tags = 1 << 7 },
      |          ^
config.h:104:10: note: (near initialization for ‘autostarttaglist[0]’)
config.h:104:17: error: initialization of ‘int’ from ‘const char **’ makes integer from pointer without a cast [-Wint-conversion]
  104 |         {.cmd = todo, .tags = 1 << 7 },
      |                 ^~~~
config.h:104:17: note: (near initialization for ‘autostarttaglist[0]’)
config.h:104:17: error: initializer element is not computable at load time
config.h:104:17: note: (near initialization for ‘autostarttaglist[0]’)
config.h:104:23: error: field name not in record or union initializer
  104 |         {.cmd = todo, .tags = 1 << 7 },
      |                       ^
config.h:104:23: note: (near initialization for ‘autostarttaglist[0]’)
config.h:104:31: warning: excess elements in scalar initializer
  104 |         {.cmd = todo, .tags = 1 << 7 },
      |                               ^
config.h:104:31: note: (near initialization for ‘autostarttaglist[0]’)
config.h:105:9: warning: braces around scalar initializer
  105 |         {.cmd = NULL, .tags = 0 },
      |         ^
config.h:105:9: note: (near initialization for ‘autostarttaglist[1]’)
config.h:105:10: error: field name not in record or union initializer
  105 |         {.cmd = NULL, .tags = 0 },
      |          ^
config.h:105:10: note: (near initialization for ‘autostarttaglist[1]’)
config.h:105:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
  105 |         {.cmd = NULL, .tags = 0 },
      |                 ^~~~
config.h:105:17: note: (near initialization for ‘autostarttaglist[1]’)
config.h:105:23: error: field name not in record or union initializer
  105 |         {.cmd = NULL, .tags = 0 },
      |                       ^
config.h:105:23: note: (near initialization for ‘autostarttaglist[1]’)
config.h:105:31: warning: excess elements in scalar initializer
  105 |         {.cmd = NULL, .tags = 0 },
      |                               ^
config.h:105:31: note: (near initialization for ‘autostarttaglist[1]’)
make: *** [Makefile:12: dwm.o] Error 1
